# fingerprint_esp32

./: .gitignore  Iot_final_report.tex  README.md  esp32_fingerprint_check_R307.ino  esp32_to_raspi.py  fingerprint_enrollment.ino  mqtt_postgress.py  mqtt_to_postgresql.py  package-lock.json  pdfa.xmpi  process_fingerprint.py
C++/: CMakeLists.txt  README.md  main.cpp
IOT-Dashboard/: package-lock.json  package.json
IOT-Dashboard/src/app/: page.js
IOT-Dashboard/src/app/api/roles/: route.js
IOT-Dashboard/src/app/api/users/: route.js
IOT-Dashboard/src/app/dashboard_admin/: page.js
MQTT/: mqtt_to_postgresql.py  test_MQTT.py
MQTT/IOT-Dashboard/api/: server.js
MQTT/IOT-Dashboard/src/app/api/users/: route.js
MQTT/IOT-Dashboard/src/app/dashboard_admin/: page.js
MQTT/esp32_fingerprint_check_R307/: esp32_fingerprint_check_R307.ino
MQTT/postgress_sql/: init_checkin_db.sql
esp32_fingerprint_check_R307/: esp32_fingerprint_check_R307.ino
